--- a/index.html
+++ b/index.html
@@ -48,8 +48,12 @@
             </div>
           </div>
           <div class="button-container">
-            <button class="button">Поддержать шахматную мысль</button>
-            <button class="button">Подробнее о турнире</button>
+            <button class="button" id="support-btn">
+              Поддержать шахматную мысль
+            </button>
+            <button class="button" id="more-info-btn">
+              Подробнее о турнире
+            </button>
           </div>
         </div>
         <div class="city">
@@ -216,13 +220,13 @@
           <div class="grid-mobile-slider-container">
             <div class="grid-slide large">
               <div class="large-container">
-              <div class="grid-item">
-                Строительство железнодорожной магистрали Москва-Васюки
-              </div>
-              <div class="grid-item">
-                Открытие фешенебельной гостиницы «Проходная пешка» и других
-                небоскрёбов
-              </div>
+                <div class="grid-item">
+                  Строительство железнодорожной магистрали Москва-Васюки
+                </div>
+                <div class="grid-item">
+                  Открытие фешенебельной гостиницы «Проходная пешка» и других
+                  небоскрёбов
+                </div>
               </div>
               <div class="plane">
                 <img src="./images/section-three/plane.png" alt="plane" />
@@ -236,10 +240,10 @@
             </div>
             <div class="grid-slide large">
               <div class="large-container">
-              <div class="grid-item">Строительство дворца для турнира</div>
-              <div class="grid-item">
-                Размещение гаражей для гостевого автотранспорта
-              </div>
+                <div class="grid-item">Строительство дворца для турнира</div>
+                <div class="grid-item">
+                  Размещение гаражей для гостевого автотранспорта
+                </div>
               </div>
             </div>
             <div class="grid-slide">
